Java code - resolved dependencies.

--- a/Java/azureopenaiexample/src/main/resources/application.properties
+++ b/Java/azureopenaiexample/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=azureopenaiexample
+spring.ai.azure.openai.api-key=<Azure Open AI Key>
+spring.ai.azure.openai.endpoint=<Endpoint>
+spring.ai.azure.openai.model=<Azure Open AI Model Name>
+spring.ai.azure.openai.embedding.options.model=<Azure Open AI Embedding model>
+spring.ai.azure.openai.embedding.metadata-mode=embed
+spring.ai.azure.openai.temperature=0.5
+spring.ai.azure.openai.chat.options.model=<Model Name>
