Java: Pinecone initialization complete

--- a/Java/azureopenaiexample/pom.xml
+++ b/Java/azureopenaiexample/pom.xml
@@ -37,7 +37,6 @@
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-pinecone</artifactId>
-			<version>0.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -88,6 +87,13 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.ai</groupId>
+				<artifactId>spring-ai-bom</artifactId>
+				<version>0.8.1-SNAPSHOT</version>
+				<type>pom</type>
+				<scope>import</scope>
+        	</dependency>
 		</dependencies>
 	</dependencyManagement>
 
