--- a/Java/azureopenaiexample/src/main/resources/application.properties
+++ b/Java/azureopenaiexample/src/main/resources/application.properties
@@ -4,5 +4,10 @@ spring.ai.azure.openai.endpoint=<Endpoint>
 spring.ai.azure.openai.model=<Azure Open AI Model Name>
 spring.ai.azure.openai.embedding.options.model=<Azure Open AI Embedding model>
 spring.ai.azure.openai.embedding.metadata-mode=embed
-spring.ai.azure.openai.temperature=0.5
+spring.ai.azure.openai.chat.options.temperature=0.5
 spring.ai.azure.openai.chat.options.model=<Model Name>
+spring.main.allow-bean-definition-overriding=true
+spring.ai.vectorstore.pinecone.api-key=83a7219e-be5d-47e9-b8b7-320398d1f1c5
+spring.ai.vectorstore.pinecone.environment=gcp-starter
+spring.ai.vectorstore.pinecone.project-id=81e12c8
+spring.ai.vectorstore.pinecone.index-name=azure-open-ai-search-index
