Java - PDF chunking, embedding and saving to Pinecone DB.

--- a/Java/azureopenaiexample/src/main/resources/application.properties
+++ b/Java/azureopenaiexample/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=azureopenaiexample
-spring.ai.azure.openai.api-key=<Azure Open AI Key>
-spring.ai.azure.openai.endpoint=<Endpoint>
-spring.ai.azure.openai.model=<Azure Open AI Model Name>
-spring.ai.azure.openai.embedding.options.model=<Azure Open AI Embedding model>
+spring.ai.azure.openai.api-key=Azure_Open_AI_Key
+spring.ai.azure.openai.endpoint=Azure_Open_AI_Endpoint
+spring.ai.azure.openai.embedding.options.model=text-embedding-ada-002
+spring.ai.azure.openai.embedding.options.deployment-name=Azure_Open_AI_Deployment_Name
 spring.ai.azure.openai.embedding.metadata-mode=embed
 spring.ai.azure.openai.chat.options.temperature=0.5
 spring.ai.azure.openai.chat.options.model=<Model Name>
 spring.main.allow-bean-definition-overriding=true
-spring.ai.vectorstore.pinecone.api-key=83a7219e-be5d-47e9-b8b7-320398d1f1c5
+spring.ai.vectorstore.pinecone.api-key=Pinecone_API_Key
 spring.ai.vectorstore.pinecone.environment=gcp-starter
-spring.ai.vectorstore.pinecone.project-id=81e12c8
-spring.ai.vectorstore.pinecone.index-name=azure-open-ai-search-index
+spring.ai.vectorstore.pinecone.project-id=Pinecone_Project_Id
+spring.ai.vectorstore.pinecone.index-name=Pinecone_Index_Name
