Python - Code to create and store embeddings using langchanin

--- a/Java/azureopenaiexample/src/main/resources/application.properties
+++ b/Java/azureopenaiexample/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=azureopenaiexample
-spring.ai.azure.openai.api-key=Azure_Open_AI_Key
-spring.ai.azure.openai.endpoint=Azure_Open_AI_Endpoint
-spring.ai.azure.openai.embedding.options.model=text-embedding-ada-002
-spring.ai.azure.openai.embedding.options.deployment-name=Azure_Open_AI_Deployment_Name
+spring.ai.azure.openai.api-key=bb7c022ca6c34d2c8789375eb3eedcaa
+spring.ai.azure.openai.endpoint=https://azure-openai-search.openai.azure.com/
+spring.ai.azure.openai.embedding.options.deployment-name=openai-embedding-model
 spring.ai.azure.openai.embedding.metadata-mode=embed
 spring.ai.azure.openai.chat.options.temperature=0.5
-spring.ai.azure.openai.chat.options.model=<Model Name>
+spring.ai.azure.openai.chat.options.deployment-name=gpt-35-turbo-chat-model
 spring.main.allow-bean-definition-overriding=true
-spring.ai.vectorstore.pinecone.api-key=Pinecone_API_Key
+spring.ai.vectorstore.pinecone.api-key=c6431e6f-ebcb-4b07-9951-0509d9cbdd45
 spring.ai.vectorstore.pinecone.environment=gcp-starter
-spring.ai.vectorstore.pinecone.project-id=Pinecone_Project_Id
-spring.ai.vectorstore.pinecone.index-name=Pinecone_Index_Name
+spring.ai.vectorstore.pinecone.project-id=81e12c8
+spring.ai.vectorstore.pinecone.index-name=azure-open-ai-search-index
